# tildeathc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.md
include/tildeathc/: codegen.h  il.h  nullcheck.h  objects.h  parse.h  project_info.h.in  registers.h  tokenize.h  util.h  validate_il.h
lib/tildeathc/: NUMBERS256.~ATH
src/: CMakeLists.txt  codegen.c  il.c  parse.c  registers.c  tildeathc.c  tokenize.c  util.c  validate_il.c
src/runtime/: CMakeLists.txt  objects.c
test/: CMakeLists.txt  basic_parse_test.c  comment_test.c  invalid_varname.c  parse_empty_loop.c  quote_error.c  quote_test.c  syntax_error.c  tildeathc_test.c  tokenize_crash.c  tokenize_parse_integration.c  tokenize_test.c  unfinished_grave.c
test/codegen/: CMakeLists.txt  bif_kill_codegen.c  bifurcate_dead_overwrite.c  bifurcate_overwrite_self.c  codegen_declare_abstract_loop_kill_out.c  codegen_refcount_test_1.c  declare_abstract_loop_kill_out.c  kill_multiple.c  refcount_test_1.c  refcount_test_2.c
test/il/: CMakeLists.txt  abstract.c  basic_il_test.c  die_multiple.c  il_abstract.c  il_bifurcate.c  il_die.c  il_empty_loop.c  il_input.c  il_library.c  il_nested.c  il_print.c  il_universe.c
test/include/: tildeathc_test.h
test/inputs/: COMMENT_TEST.~ATH  GARBAGE_INPUT.~ATH  QUOTE_ERROR.~ATH  QUOTE_ESCAPES.~ATH  QUOTE_TEST.~ATH  TOKENIZE_PARSE_INTEGRATION.~ATH  TOKENIZE_TEST.~ATH
test/integration/: CMakeLists.txt  tokenize_parse_integration.c
test/parse/: CMakeLists.txt  banned_varname_unrecognized_token.c  basic_parse_test.c  empty_loop.c  execute_print.c  imports.c  invalid_varname.c  nested.c  parse_empty_loop.c  syntax_error.c  unfinished_grave.c  unrecognized_token.c
test/runtime/: CMakeLists.txt  bifurcate_abstract.c  bifurcate_existing_children.c  bifurcate_input.c  create_input_object.c  create_object.c  kill_universe.c  refcount_test.c  runtime_bifurcate_universe.c  runtime_kill_object.c
test/scripts/: CMakeLists.txt  generate_codegen_test_input.c
test/tokenize/: CMakeLists.txt  bad_input_crash.c  basic_test.c  comment_test.c  quote_error.c  quote_escapes.c  quote_test.c
test/validation/: CMakeLists.txt  bifurcate_universe.c  bifurcation.c  kill_universe.c  kill_universe_when_multiple.c  multiple_declarations.c  one_declaration.c  overbifurcate_kill_universe.c  scope_test_1.c  scope_test_2.c  scope_test_3.c  scope_test_4.c  scope_test_5.c  this_dot_die.c  validate_il_bifurcate_universe.c  validate_il_bifurcation.c  validate_il_kill_universe.c  validate_il_multiple_declarations.c  validate_il_normal.c  validate_il_one_declaration.c  validate_il_overbifurcate_kill_universe.c  validate_il_overwrite_kill_universe.c  validate_il_undeclared.c
